# Model-Regression-Detection-System2

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  replacements.txt
src/mrds/: __init__.py
src/mrds/adapters/: __init__.py
src/mrds/adapters/llm/: anthropic_runner.py  base.py  factory.py  gemini_runner.py  openai_runner.py
src/mrds/core/: __init__.py
src/mrds/core/config/: settings.py
src/mrds/core/exceptions/: base.py
src/mrds/core/logging/: setup.py
src/mrds/domain/: __init__.py  models.py
src/mrds/infrastructure/: __init__.py  logging.py
src/mrds/presentation/: __init__.py
src/mrds/presentation/cli/: __init__.py
src/mrds/presentation/reporting/: generator.py
src/mrds/presentation/reporting/templates/: report_template.html
src/mrds/use_cases/: __init__.py  regression_detector.py
tests/unit/: test_llm_factory.py  test_regression_detector.py
tests/unit/presentation/: test_reporting.py
